fix overflow ridiculo

--- a/projeto/lobinhos/src/app/page.module.css
+++ b/projeto/lobinhos/src/app/page.module.css
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden;
   background-image: url('/snowforest2.png');
   background-size: cover;
   padding-top: 2rem;
