--- a/projeto/lobinhos/src/components/cards/maincard/style.module.css
+++ b/projeto/lobinhos/src/components/cards/maincard/style.module.css
@@ -106,7 +106,6 @@
   justify-content: center;
   align-items: center;
   gap: 6px;
-  margin-top: 32px;
   width: 100%;
 }
 
